tests/rosetta/transpiler/Rust/bell-numbers.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:65:2
   |
65 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:78:2
   |
78 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:43:11
   |
43 |     while (i < n) {
   |           ^     ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
43 -     while (i < n) {
43 +     while i < n {
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:46:15
   |
46 |         while (j < i) {
   |               ^     ^
   |
help: remove these parentheses
   |
46 -         while (j < i) {
46 +         while j < i {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:48:17
   |
48 |             j = (j + 1);
   |                 ^     ^
   |
help: remove these parentheses
   |
48 -             j = (j + 1);
48 +             j = j + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:51:13
   |
51 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
51 -         i = (i + 1);
51 +         i = i + 1;
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:55:11
   |
55 |     while (i < n) {
   |           ^     ^
   |
help: remove these parentheses
   |
55 -     while (i < n) {
55 +     while i < n {
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:58:15
   |
58 |         while (j < i) {
   |               ^     ^
   |
help: remove these parentheses
   |
58 -         while (j < i) {
58 +         while j < i {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:59:43
   |
59 |             tri[i as usize][j as usize] = (tri[i as usize].clone()[(j - 1) as usize] + tri[(i - 1) as usize].clone()[(j - 1) as usize]);
   |                                           ^                                                                                           ^
   |
help: remove these parentheses
   |
59 -             tri[i as usize][j as usize] = (tri[i as usize].clone()[(j - 1) as usize] + tri[(i - 1) as usize].clone()[(j - 1) as usize]);
59 +             tri[i as usize][j as usize] = tri[i as usize].clone()[(j - 1) as usize] + tri[(i - 1) as usize].clone()[(j - 1) as usize];
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:60:17
   |
60 |             j = (j + 1);
   |                 ^     ^
   |
help: remove these parentheses
   |
60 -             j = (j + 1);
60 +             j = j + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:62:13
   |
62 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
62 -         i = (i + 1);
62 +         i = i + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:82:28
   |
82 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
help: remove these parentheses
   |
82 -     let duration_us: i64 = ((_end - _start) / 1000);
82 +     let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:83:29
   |
83 |     let memory_bytes: i64 = (_end_mem - _start_mem);
   |                             ^                     ^
   |
help: remove these parentheses
   |
83 -     let memory_bytes: i64 = (_end_mem - _start_mem);
83 +     let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0425]: cannot find function `padStart` in this scope
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:70:76
   |
70 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", "", padStart(i.to_string(), 2, " ")), ": "), bt[i as usize].clone()[...
   |                                                                          ^^^^^^^^ not found in this scope

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/bell-numbers.rs:40:21
   |
40 |     fn bellTriangle(mut n: i64) -> Vec<Vec<i64>> {
   |                     ----^
   |                     |
   |                     help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 1 previous error; 14 warnings emitted

For more information about this error, try `rustc --explain E0425`.
